fixed footer text align

--- a/src/Components/Styles/Footer.css
+++ b/src/Components/Styles/Footer.css
@@ -20,9 +20,12 @@ footer h2 {
   font-size: 1.2rem;
   letter-spacing: 2px;
   font-weight: 500;
+  margin: 0 auto;
 }
 
 footer span {
   font-size: 0.9rem;
   letter-spacing: 1px;
+  margin: 0 auto;
+  text-align: center;
 }
